--- a/package.json
+++ b/package.json
@@ -11,11 +11,14 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.6.2",
+    "bcrypt": "^5.1.1",
     "browserify-zlib": "^0.2.0",
+    "node-polyfill-webpack-plugin": "^2.0.1",
     "package-name": "^0.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.18.0",
+    "react-router-dom": "^6.16.0",
     "react-scripts": "^5.0.1",
     "web-vitals": "^2.1.4"
   },
@@ -46,5 +49,9 @@
   "description": "Group 20's SE Capstone Project: A Doggy Calendar Website",
   "main": "index.js",
   "author": "Chelsea Mensah",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "cors": "^2.8.5",
+    "express": "^4.18.2"
+  }
 }
