--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.2",
     "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
     "browserify-zlib": "^0.2.0",
     "node-polyfill-webpack-plugin": "^2.0.1",
     "package-name": "^0.1.0",
@@ -20,6 +21,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.16.0",
     "react-scripts": "^5.0.1",
+    "sqlite3": "^5.1.6",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
