--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
     "browserify-zlib": "^0.2.0",
+    "helmet": "^7.1.0",
     "node-polyfill-webpack-plugin": "^2.0.1",
     "package-name": "^0.1.0",
     "react": "^18.2.0",
