User Session with JWT
npm install jsonwebtoken
----------------------------
Added JWT auth to web app via browser local storage.
It is saved in the LogIn.js file.
It is created in the authController.js file.
The profile page now uses the JWT to show the corresponding User info.

BUG : The profile page will crash the web app when there is not a JWT found in local storage.

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "bcryptjs": "^2.4.3",
     "browserify-zlib": "^0.2.0",
     "helmet": "^7.1.0",
+    "jsonwebtoken": "^9.0.2",
     "node-polyfill-webpack-plugin": "^2.0.1",
     "package-name": "^0.1.0",
     "react": "^18.2.0",
